Updated the FAQs section according to UMHackathon 2025

--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
               </h2>
             </div>
           </div>
-
+  
           <div class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10">
             <div class="accordion" id="questions">
               <div
@@ -455,7 +455,7 @@
                     aria-expanded="false"
                     aria-controls="question-1"
                   >
-                    When will UMHackathon 2024 be held?
+                    When will UMHackathon 2025 be held?
                   </button>
                 </h2>
                 <div
@@ -465,14 +465,14 @@
                   data-bs-parent="#questions"
                 >
                   <div class="accordion-body">
-                    <p>
-                      UMHackathon 2023 will be held physically, from 5 May 2023
-                      (Friday) to 7 May 2023 (Sunday).
+                    <p>                 
+                      UMHackathon 2025 preliminary round will be carried out from 10 April 2025 (Thursday) to 12 April 2025 (Saturday). 
+                      The final round of UMHackathon2025 will be held from 19th April 2025 (Saturday) to 20th April 2025 (Sunday).
                     </p>
                   </div>
                 </div>
               </div>
-
+  
               <div
                 class="accordion-item my-4"
                 data-aos="fade-left"
@@ -506,7 +506,7 @@
                   </div>
                 </div>
               </div>
-
+  
               <div
                 class="accordion-item my-4"
                 data-aos="fade-right"
@@ -533,13 +533,13 @@
                 >
                   <div class="accordion-body">
                     <p>
-                      Yes, each team needs to deposit a commitment fee of RM50.
-                      After the end of event, fee will be refunded.
+                      No, registration for the UMHackathon 2025 is completely free! There are no fees required to participate. 
+                      Simply sign up and join the event. But it’s on a first come first serve basis! 
                     </p>
                   </div>
                 </div>
               </div>
-
+  
               <div
                 class="accordion-item my-4"
                 data-aos="fade-left"
@@ -566,16 +566,15 @@
                 >
                   <div class="accordion-body">
                     <p>
-                      Team registration form will be open from 1 April 2023
-                      (Saturday 12:00 P.M.) till 14 April 2023 (Friday 11:59
-                      P.M.) However, the registration is on a
-                      first-come,first-served basis and will be closed once 30
+                      Team registration form will open from 17th March 2025 12.00 pm until 31st March 2025 11.59 pm (GMT +8).
+                      However, the registration is on a
+                      first-come,first-served basis and will be closed once 90
                       teams have registered.
                     </p>
                   </div>
                 </div>
               </div>
-
+  
               <div
                 class="accordion-item my-4"
                 data-aos="fade-right"
@@ -602,14 +601,13 @@
                 >
                   <div class="accordion-body">
                     <p>
-                      To register, you are required to form a team of 1 to 5
-                      members, regardless of the university they are currently
-                      studying in.
+                      Participants have the option to join individually or in teams.
+                      Teams may comprise a minimum of one (1) and a maximum of five (5) members. 
                     </p>
                   </div>
                 </div>
               </div>
-
+  
               <div
                 class="accordion-item my-4"
                 data-aos="fade-left"
@@ -636,15 +634,13 @@
                 >
                   <div class="accordion-body">
                     <p>
-                      Each team shall elect a team leader and fill up the
-                      UMHackathon 2023 Team Registration Form. A formal
-                      acceptance notice will be sent to the team leader via
-                      email upon valid team registration.
+                      Each team will need to elect a team leader and fill up the UMHackathon 2025 Team Registration Form. 
+                      A formal acceptance notice will be sent to the team leader via email upon valid team registration. 
                     </p>
                   </div>
                 </div>
               </div>
-
+  
               <div
                 class="accordion-item my-4"
                 data-aos="fade-right"
@@ -671,13 +667,13 @@
                 >
                   <div class="accordion-body">
                     <p>
-                      UMHackathon 2025 will be conducted online during preliminary round (5-6 April) and physically
-                      during final round (12-13 April) at KPS
+                      UMHackathon 2025 will be conducted online during preliminary round (10-12 April) and physically
+                      during final round (19-20 April) at KPS
                     </p>
                   </div>
                 </div>
               </div>
-
+  
               <div
                 class="accordion-item my-4"
                 data-aos="fade-left"
@@ -705,14 +701,19 @@
                 >
                   <div class="accordion-body">
                     <p>
-                      There will be no ideation round, all the participating
-                      teams will be brought to the final picthing together.
-                      Remember to catch up with our latest updates!
+                      The UMHackathon 2025 will be divided into two rounds, the preliminary round and the final round. 
+                      The problem statement of the preliminary round will be released on 10th April 2025 (Thursday) at 8 pm. 
+                      An online meeting will be held to explain the domain and how each team are assigned to their domain and problem statement. 
+                      All teams may start to build their prototype once they receive their problem statement. 
+                      The preliminary round will be carried out from 10th April 2025 (Thursday) 8pm until 12th April 2025 11.59 pm. 
+                      The final round of UMHackathon 2025 will be held physically from 19th April 2025 (Saturday) to 20th April 2025 (Sunday). 
+                      Key events such as the opening ceremony, workshops, final pitching and closing ceremony will take place over these two days. 
+                      All the participants are required to attend the UMHackathon from 19th April 2025 (Saturday) to 20th April 2025 (Sunday) otherwise that particular team will be considered as disqualified. 
                     </p>
                   </div>
                 </div>
               </div>
-
+  
               <div class="text-center text-light mt-5">
                 <h5 class="fs-6">
                   Need more infomation? Email us at
