--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
           <div class="line_section">
             <div class="bead"></div>
             <div class="content content1">
-              <h2>1st March 2024</h2>
+              <h2>17th February 2025</h2>
               <ul>
                 <li>Registration Open</li>
               </ul>
@@ -329,7 +329,7 @@
           <div class="line_section">
             <div class="bead"></div>
             <div class="content content2">
-              <h2>14th March 2024</h2>
+              <h2>7th April 2025</h2>
               <ul>
                 <li>Registration Close</li>
               </ul>
@@ -339,9 +339,9 @@
           <div class="line_section">
             <div class="bead"></div>
             <div class="long_content content3">
-              <h2>26th March 2024</h2>
+              <h2>9th April 2025</h2>
               <ul>
-                <li>Reveal of Problem Statements</li>
+                <li>Talk : Introduction to UMHackathon</li>
                 
               </ul>
             </div>
@@ -350,7 +350,38 @@
           <div class="line_section">
             <div class="bead"></div>
             <div class="long_content content4">
-              <h2>30th March 2024</h2>
+              <h2>10th April 2025</h2>
+              <ul>
+                <li>Preliminary Round Begin</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="line_section">
+            <div class="bead"></div>
+            <div class="long_content content4">
+              <h2>13th April 2025</h2>
+              <ul>
+                <li>Preliminary Round End</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="line_section">
+            <div class="bead"></div>
+            <div class="long_content content5">
+              <h2>17th April 2025</h2>
+              <ul>
+                <li>Advanced Sharing Session</li>
+                <!-- <li>Closing Ceremony</li> -->
+              </ul>
+            </div>
+          </div>
+
+          <div class="line_section">
+            <div class="bead"></div>
+            <div class="long_content content6">
+              <h2>19th April 2025</h2>
               <ul>
                 <li>Opening Ceremony</li>
                 <li>Mentoring Session</li>
@@ -362,14 +393,15 @@
 
           <div class="line_section">
             <div class="bead"></div>
-            <div class="long_content content5">
-              <h2>31st March 2024</h2>
+            <div class="long_content content6">
+              <h2>20th April 2025</h2>
               <ul>
                 <li>Final Pitching</li>
                 <li>Closing Ceremony</li>
               </ul>
             </div>
           </div>
+
         </div>
       </div>
     </section>
