--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       >
         <div class="container-fluid">
           <a href="#home" class="navbar-brand">
-            <img id="navigation-logo" src="./assets/images/UMH2024.svg" />
+            <img id="navigation-logo" src="./assets/images/BLACK FONT.PNG" />
           </a>
           <!-- toggle button for  small screen size -->
           <button
