--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <!-- Metadata -->
-    <title>UMHackathon wowowowo</title>
+    <title>UMHackathon</title>
     <meta
       name="description"
       content="UMHackathon is a competition-style events organized by Persatuan Komputer Universiti Malaya (PEKOM) and Faculty of Computer Science and Information System."
@@ -266,15 +266,15 @@
           <div class="prizepool_container" id="prizepool_container">
             <div class="prizepool_award second" id="gold">
               <img src="assets/images/secondrunner.svg" alt="" class="tier" />
-              <p class="amount_second">RM 3000</p>
+              <p class="amount_second">RM 4000</p>
             </div>
             <div class="prizepool_award first" id="diamond">
               <img src="assets/images/champion.svg" alt="" class="tier" />
-              <p class="amount_first">RM 5000</p>
+              <p class="amount_first">RM 7000</p>
             </div>
             <div class="prizepool_award third" id="silver">
               <img src="assets/images/thirdrunner.svg" alt="" class="tier" />
-              <p class="amount_third">RM 2000</p>
+              <p class="amount_third">RM 2500</p>
             </div>
           </div>
         </div>
