--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     />
 
     <!-- Icons,stylesheet and fonts -->
-    <link rel="icon" href="./assets/images/um-logo.svg" type="image/svg" />
+    <link rel="icon" href="./assets/images/um-logo25.png" type="image/svg" />
     <link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link
@@ -155,7 +155,7 @@
 
           <div class="aboutus-wrapper">
             <p class="aboutus-content">
-              UMHackathon 2024 is a national hackathon organized by the Persatuan Komputer Universiti Malaya(PEKOM) and the 
+              UMHackathon 2025 is a national hackathon organized by the Persatuan Komputer Universiti Malaya(PEKOM) and the 
               Faculty of Computer Science and Information Technology, focusing on Data Science and Machine Learning. 
               We aim to solve real-world data challenges in various fields through industry experts.
             </p>
@@ -248,7 +248,7 @@
             <div class="overview">
               <i class="uil uil-laptop overview_icon"></i>
               <h3>Competition Mode</h3>
-              <div>Physical Mode</div>
+              <div>Physical and Physical Mode</div>
             </div>
             <div class="overview">
               <i class="uil uil-university overview_icon"></i>
