--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             <div class="overview">
               <i class="uil uil-laptop overview_icon"></i>
               <h3>Competition Mode</h3>
-              <div>Physical and Physical Mode</div>
+              <div>Physical and Online Mode</div>
             </div>
             <div class="overview">
               <i class="uil uil-university overview_icon"></i>
