Made changes to Timeline section - Change background color - Added logo2025 - Added dottedline and more beads

--- a/index.html
+++ b/index.html
@@ -310,15 +310,21 @@
     <section id="timeline" class="timeline_section section">
       <div class="timeline_container">
         <div class="top-section">
-          <h1 class="section_title">Our Journey has started</h1>
+          <img id="timeline-logo" src="./assets/images/umh-logo2025-white.PNG" alt="a" />
+          <h1 class="section_title">Journey of UM Hackathon 2025</h1>
         </div>
 
         <div class="timeline">
           <div class="line"></div>
+
           <div class="line_section">
-            <div class="bead"></div>
             <div class="content content1">
-              <h2>17th February 2025</h2>
+              <div class="content_title">
+                <h2>17th February 2025</h2>
+                <div class="bead bead_start"></div>
+                <hr class="dotted_line">
+                <div class="bead bead_end"></div>
+              </div>
               <ul>
                 <li>Registration Open</li>
               </ul>
@@ -327,9 +333,13 @@
           </div>
 
           <div class="line_section">
-            <div class="bead"></div>
             <div class="content content2">
-              <h2>7th April 2025</h2>
+              <div class="content_title">
+                <h2>7th April 2025</h2>
+                <div class="bead bead_start"></div>
+                <hr class="dotted_line">
+                <div class="bead bead_end"></div>
+              </div>
               <ul>
                 <li>Registration Close</li>
               </ul>
@@ -337,9 +347,13 @@
           </div>
 
           <div class="line_section">
-            <div class="bead"></div>
-            <div class="long_content content3">
-              <h2>9th April 2025</h2>
+            <div class="content content3">
+              <div class="content_title">
+                <h2>9th April 2025</h2>
+                <div class="bead bead_start"></div>
+                <hr class="dotted_line">
+                <div class="bead bead_end"></div>
+              </div>
               <ul>
                 <li>Talk : Introduction to UMHackathon</li>
                 
@@ -348,9 +362,13 @@
           </div>
 
           <div class="line_section">
-            <div class="bead"></div>
-            <div class="long_content content4">
-              <h2>10th April 2025</h2>
+            <div class="content content4">
+              <div class="content_title">
+                <h2>10th April 2025</h2>
+                <div class="bead bead_start"></div>
+                <hr class="dotted_line">
+                <div class="bead bead_end"></div>
+              </div>
               <ul>
                 <li>Preliminary Round Begin</li>
               </ul>
@@ -358,9 +376,13 @@
           </div>
 
           <div class="line_section">
-            <div class="bead"></div>
-            <div class="long_content content4">
-              <h2>13th April 2025</h2>
+            <div class="content content5">
+              <div class="content_title">
+                <h2>13th April 2025</h2>
+                <div class="bead bead_start"></div>
+                <hr class="dotted_line">
+                <div class="bead bead_end"></div>
+              </div>
               <ul>
                 <li>Preliminary Round End</li>
               </ul>
@@ -368,9 +390,13 @@
           </div>
 
           <div class="line_section">
-            <div class="bead"></div>
-            <div class="long_content content5">
-              <h2>17th April 2025</h2>
+            <div class="content content6">
+              <div class="content_title">
+                <h2>17th April 2025</h2>
+                <div class="bead bead_start"></div>
+                <hr class="dotted_line">
+                <div class="bead bead_end"></div>
+              </div>
               <ul>
                 <li>Advanced Sharing Session</li>
                 <!-- <li>Closing Ceremony</li> -->
@@ -379,9 +405,13 @@
           </div>
 
           <div class="line_section">
-            <div class="bead"></div>
-            <div class="long_content content6">
-              <h2>19th April 2025</h2>
+            <div class="long_content content7">
+              <div class="content_title">
+                <h2>19th April 2025</h2>
+                <div class="bead bead_start"></div>
+                <hr class="dotted_line">
+                <div class="bead bead_end"></div>
+              </div>
               <ul>
                 <li>Opening Ceremony</li>
                 <li>Mentoring Session</li>
@@ -392,9 +422,13 @@
           </div>
 
           <div class="line_section">
-            <div class="bead"></div>
-            <div class="long_content content6">
-              <h2>20th April 2025</h2>
+            <div class="long_content content8">
+              <div class="content_title">
+                <h2>20th April 2025</h2>
+                <div class="bead bead_start"></div>
+                <hr class="dotted_line">
+                <div class="bead bead_end"></div>
+              </div>
               <ul>
                 <li>Final Pitching</li>
                 <li>Closing Ceremony</li>
