--- a/index.html
+++ b/index.html
@@ -310,129 +310,78 @@
     <section id="timeline" class="timeline_section section">
       <div class="timeline_container">
         <div class="top-section">
-          <img id="timeline-logo" src="./assets/images/umh-logo2025-white.PNG" alt="a" />
-          <h1 class="section_title">Journey of UM Hackathon 2025</h1>
+          <h1 class="section_title">Our journey has started</h1>
         </div>
 
         <div class="timeline">
           <div class="line"></div>
-
+          
           <div class="line_section">
             <div class="content content1">
-              <div class="content_title">
-                <h2>17th February 2025</h2>
-                <div class="bead bead_start"></div>
-                <hr class="dotted_line">
-                <div class="bead bead_end"></div>
-              </div>
-              <ul>
-                <li>Registration Open</li>
-              </ul>
+              <div class="bead"></div>
+              <h2>17th February 2025</h2>
+              <p>Registration Open</p>
             </div>
             <div></div>
           </div>
 
           <div class="line_section">
             <div class="content content2">
-              <div class="content_title">
-                <h2>7th April 2025</h2>
-                <div class="bead bead_start"></div>
-                <hr class="dotted_line">
-                <div class="bead bead_end"></div>
-              </div>
-              <ul>
-                <li>Registration Close</li>
-              </ul>
+              <div class="bead"></div>
+              <h2>7th April 2025</h2>
+              <p>Registration Close</p>
             </div>
           </div>
 
           <div class="line_section">
             <div class="content content3">
-              <div class="content_title">
-                <h2>9th April 2025</h2>
-                <div class="bead bead_start"></div>
-                <hr class="dotted_line">
-                <div class="bead bead_end"></div>
-              </div>
-              <ul>
-                <li>Talk : Introduction to UMHackathon</li>
-                
-              </ul>
+              <div class="bead"></div>
+              <h2>9th April 2025</h2>
+              <p>Talk : Introduction to UMHackathon</p>
             </div>
           </div>
 
           <div class="line_section">
             <div class="content content4">
-              <div class="content_title">
-                <h2>10th April 2025</h2>
-                <div class="bead bead_start"></div>
-                <hr class="dotted_line">
-                <div class="bead bead_end"></div>
-              </div>
-              <ul>
-                <li>Preliminary Round Begin</li>
-              </ul>
+              <div class="bead"></div>
+              <h2>10th April 2025</h2>
+              <p>Preliminary Round Begin</p>
             </div>
           </div>
 
           <div class="line_section">
             <div class="content content5">
-              <div class="content_title">
-                <h2>13th April 2025</h2>
-                <div class="bead bead_start"></div>
-                <hr class="dotted_line">
-                <div class="bead bead_end"></div>
-              </div>
-              <ul>
-                <li>Preliminary Round End</li>
-              </ul>
+              <div class="bead"></div>
+              <h2>13th April 2025</h2>
+              <p>Preliminary Round End</p>
             </div>
           </div>
 
           <div class="line_section">
             <div class="content content6">
-              <div class="content_title">
-                <h2>17th April 2025</h2>
-                <div class="bead bead_start"></div>
-                <hr class="dotted_line">
-                <div class="bead bead_end"></div>
-              </div>
-              <ul>
-                <li>Advanced Sharing Session</li>
-                <!-- <li>Closing Ceremony</li> -->
-              </ul>
+              <div class="bead"></div>
+              <h2>17th April 2025</h2>
+              <p>Advanced Sharing Session</p>
             </div>
           </div>
 
           <div class="line_section">
             <div class="long_content content7">
-              <div class="content_title">
-                <h2>19th April 2025</h2>
-                <div class="bead bead_start"></div>
-                <hr class="dotted_line">
-                <div class="bead bead_end"></div>
-              </div>
-              <ul>
-                <li>Opening Ceremony</li>
-                <li>Mentoring Session</li>
-                <li>Booth Exhibition</li>
-                <li>Workshop</li>
-              </ul>
+              <div class="bead"></div>
+              <h2>19th April 2025</h2>
+              <p>Opening Ceremony</p>
+              <p>Mentoring Session</p>
+              <p>Booth Exhibition</p>
+              <p>Workshop</p>
             </div>
           </div>
 
           <div class="line_section">
             <div class="long_content content8">
-              <div class="content_title">
-                <h2>20th April 2025</h2>
-                <div class="bead bead_start"></div>
-                <hr class="dotted_line">
-                <div class="bead bead_end"></div>
-              </div>
-              <ul>
-                <li>Final Pitching</li>
-                <li>Closing Ceremony</li>
-              </ul>
+              <div class="bead"></div>
+              <h2>20th April 2025</h2>
+              <p>Final Pitching</p>
+              <p>Closing Ceremony</p>
             </div>
           </div>
 
