Some changes to Timeline

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
       <div class="timeline_container">
         <div class="top-section">
           <img id="timeline-logo" src="./assets/images/umh-logo2025-white.PNG" alt="a" />
-          <h1 class="section_title">Journey of UM Hackathon 2025</h1>
+          <h1 class="section_title">Our Journey has started</h1>
         </div>
 
         <div class="timeline">
@@ -325,9 +325,7 @@
                 <hr class="dotted_line">
                 <div class="bead bead_end"></div>
               </div>
-              <ul>
-                <li>Registration Open</li>
-              </ul>
+              <p>Registration Open</p>
             </div>
             <div></div>
           </div>
@@ -340,9 +338,7 @@
                 <hr class="dotted_line">
                 <div class="bead bead_end"></div>
               </div>
-              <ul>
-                <li>Registration Close</li>
-              </ul>
+              <p>Registration Close</p>
             </div>
           </div>
 
@@ -354,10 +350,7 @@
                 <hr class="dotted_line">
                 <div class="bead bead_end"></div>
               </div>
-              <ul>
-                <li>Talk : Introduction to UMHackathon</li>
-                
-              </ul>
+              <p>Talk : Introduction to UMHackathon</p>
             </div>
           </div>
 
@@ -369,9 +362,7 @@
                 <hr class="dotted_line">
                 <div class="bead bead_end"></div>
               </div>
-              <ul>
-                <li>Preliminary Round Begin</li>
-              </ul>
+              <p>Preliminary Round Begin</p>
             </div>
           </div>
 
@@ -383,9 +374,7 @@
                 <hr class="dotted_line">
                 <div class="bead bead_end"></div>
               </div>
-              <ul>
-                <li>Preliminary Round End</li>
-              </ul>
+              <p>Preliminary Round End</p>
             </div>
           </div>
 
@@ -397,10 +386,7 @@
                 <hr class="dotted_line">
                 <div class="bead bead_end"></div>
               </div>
-              <ul>
-                <li>Advanced Sharing Session</li>
-                <!-- <li>Closing Ceremony</li> -->
-              </ul>
+              <p>Advanced Sharing Session</p>
             </div>
           </div>
 
@@ -412,12 +398,10 @@
                 <hr class="dotted_line">
                 <div class="bead bead_end"></div>
               </div>
-              <ul>
-                <li>Opening Ceremony</li>
-                <li>Mentoring Session</li>
-                <li>Booth Exhibition</li>
-                <li>Workshop</li>
-              </ul>
+              <p>Opening Ceremony</p>
+              <p>Mentoring Session</p>
+              <p>Booth Exhibition</p>
+              <p>Workshop</p>
             </div>
           </div>
 
@@ -429,10 +413,8 @@
                 <hr class="dotted_line">
                 <div class="bead bead_end"></div>
               </div>
-              <ul>
-                <li>Final Pitching</li>
-                <li>Closing Ceremony</li>
-              </ul>
+              <p>Final Pitching</p>
+              <p>Closing Ceremony</p>
             </div>
           </div>
 
