--- a/index.html
+++ b/index.html
@@ -149,6 +149,11 @@
         ABOUT US & OBJECTIVE Section + Recap Video
         =================== -->
     <section id="about-us" class="aboutus-section">
+      <div class="background-elements">
+        <img src="./assets/images/curve-star.svg" alt="Curve Star" class="curve-star" />
+        <img src="./assets/images/top-left-doodle.svg" alt="Top Left Doodle" class="top-left-doodle" />
+        <img src="./assets/images/bottom-right-doodle.svg" alt="Bottom Right Doodle" class="bottom-right-doodle" />
+      </div>
       <div class="container">
         <div class="aboutus-container">
           <h2 class="aboutus-title aboutus">ABOUT US</h2>
@@ -172,9 +177,8 @@
                 <div class="objective-text">
                   <h3 class="objective-smalltitle">Unearthing Creativity</h3>
                   <p class="objective-content">
-                    Unearthing student's creativity in solving a problem
-                    within the specified time by providing a platform for idea
-                    generation and prototype improvement
+                    Provide a platform for students to develop creative solutions and improve prototypes within 
+                    a limited timeframe, addressing current industrial issues.
                   </p>
                 </div>
               </div>
@@ -183,16 +187,14 @@
             <div class="objective-container">
               <div class="objective-textbox2">
                 <div class="objective-image">
-                  <img src="./assets/images/Development Setting.svg" alt="a" />
+                  <img src="./assets/images/Development-Setting.svg" alt="a" />
                 </div>
                 <div class="objective-text">
                   <h3 class="objective-smalltitle">Developing ICT Skills</h3>
                   <p class="objective-content">
-                    Encourage the development of Information and Communication
-                    Technology (ICT) skills by revealing the latest
-                    technological knowledge and skills to participants, as well
-                    as challenging participants to apply the technology learned
-                    practically.
+                    Enhance participants' knowledge and application of cutting-edge technologies by 
+                    challenging them to integrate practical and theoretical ICT skills in solving real-world
+                    problems.
                   </p>
                 </div>
               </div>
@@ -206,10 +208,9 @@
                 <div class="objective-text">
                   <h3 class="objective-smalltitle">Promote Team Spirit</h3>
                   <p class="objective-content">
-                    Encourage university students to get involved in industrial
-                    problems by working together to contribute solutions to
-                    those problems through the construction of prototypes or
-                    products.
+                    Strengthen partnerships between students and industries by facilitating teamwork to design
+                    prototypes or products that address designated industrial challenges.
+
                   </p>
                 </div>
               </div>
@@ -218,6 +219,7 @@
 
           <div class="recap text-center px-xl-5 pt-5">
             <h2 class="aboutus-title aboutus">RECAP </h2>
+            <img src="./assets/images/bulb.svg" alt="Bulb Icon" class="bulb-icon">
             <iframe class="text-center px-xl-5" 
             width="100%" height="359" 
             src="https://www.youtube.com/embed/zEsi570tJe0?controls=0&showinfo=0" 
