--- a/index.html
+++ b/index.html
@@ -148,89 +148,94 @@
     <!--=================== 
         ABOUT US & OBJECTIVE Section + Recap Video
         =================== -->
-    <section id="about-us" class="aboutus-section">
-      <div class="background-elements">
-        <img src="./assets/images/curve-star.svg" alt="Curve Star" class="curve-star" />
-        <img src="./assets/images/top-left-doodle.svg" alt="Top Left Doodle" class="top-left-doodle" />
-        <img src="./assets/images/bottom-right-doodle.svg" alt="Bottom Right Doodle" class="bottom-right-doodle" />
+   <!-- Purple Blur Top Left (Background Element) -->
+<div class="design-container purple-blur-top-left">
+  <img src="./assets/images/top-left-design.svg" alt="Top Left Doodle" />
+</div>
+
+<!-- Main About Us Section -->
+<section id="about-us" class="aboutus-section">    
+  <div class="container">
+    <div class="aboutus-container">
+      <h2 class="aboutus-title aboutus">ABOUT US</h2>
+      <div class="aboutus-wrapper">
+        <p class="aboutus-content">
+          UMHackathon 2024 is a national hackathon organized by the Persatuan Komputer Universiti Malaya (PEKOM) and the 
+          Faculty of Computer Science and Information Technology, focusing on Data Science and Machine Learning. 
+          We aim to solve real-world data challenges in various fields through industry experts.
+        </p>
       </div>
-      <div class="container">
-        <div class="aboutus-container">
-          <h2 class="aboutus-title aboutus">ABOUT US</h2>
 
-          <div class="aboutus-wrapper">
-            <p class="aboutus-content">
-              UMHackathon 2024 is a national hackathon organized by the Persatuan Komputer Universiti Malaya(PEKOM) and the 
-              Faculty of Computer Science and Information Technology, focusing on Data Science and Machine Learning. 
-              We aim to solve real-world data challenges in various fields through industry experts.
-            </p>
-          </div>
-
-          <h2 class="aboutus-title">OBJECTIVE</h2>
-
-          <div class="objective">
-            <div class="objective-container">
-              <div class="objective-textbox1">
-                <div class="objective-image">
-                  <img src="./assets/images/Creativity.svg" alt="a" />
-                </div>
-                <div class="objective-text">
-                  <h3 class="objective-smalltitle">Unearthing Creativity</h3>
-                  <p class="objective-content">
-                    Provide a platform for students to develop creative solutions and improve prototypes within 
-                    a limited timeframe, addressing current industrial issues.
-                  </p>
-                </div>
-              </div>
+      <h2 class="aboutus-title">OBJECTIVE</h2>
+      <div class="objective">
+        <div class="objective-container">
+          <div class="objective-textbox1">
+            <div class="objective-image">
+              <img src="./assets/images/Creativity.svg" alt="Creativity" />
             </div>
-
-            <div class="objective-container">
-              <div class="objective-textbox2">
-                <div class="objective-image">
-                  <img src="./assets/images/Development-Setting.svg" alt="a" />
-                </div>
-                <div class="objective-text">
-                  <h3 class="objective-smalltitle">Developing ICT Skills</h3>
-                  <p class="objective-content">
-                    Enhance participants' knowledge and application of cutting-edge technologies by 
-                    challenging them to integrate practical and theoretical ICT skills in solving real-world
-                    problems.
-                  </p>
-                </div>
-              </div>
-            </div>
-
-            <div class="objective-container">
-              <div class="objective-textbox3">
-                <div class="objective-image">
-                  <img src="./assets/images/Teamwork.svg" alt="a" />
-                </div>
-                <div class="objective-text">
-                  <h3 class="objective-smalltitle">Promote Team Spirit</h3>
-                  <p class="objective-content">
-                    Strengthen partnerships between students and industries by facilitating teamwork to design
-                    prototypes or products that address designated industrial challenges.
-
-                  </p>
-                </div>
-              </div>
+            <div class="objective-text">
+              <h3 class="objective-smalltitle">Unearthing Creativity</h3>
+              <p class="objective-content">
+                Provide a platform for students to develop creative solutions and improve prototypes within 
+                a limited timeframe, addressing current industrial issues.
+              </p>
             </div>
           </div>
+        </div>
 
-          <div class="recap text-center px-xl-5 pt-5">
-            <h2 class="aboutus-title aboutus">RECAP </h2>
-            <img src="./assets/images/bulb.svg" alt="Bulb Icon" class="bulb-icon">
-            <iframe class="text-center px-xl-5" 
-            width="100%" height="359" 
-            src="https://www.youtube.com/embed/zEsi570tJe0?controls=0&showinfo=0" 
-            title="UMHackathon Recap" 
-            frameborder="0" 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <div class="objective-container">
+          <div class="objective-textbox2">
+            <div class="objective-image">
+              <img src="./assets/images/Development-Setting.svg" alt="Developing ICT Skills" />
+            </div>
+            <div class="objective-text">
+              <h3 class="objective-smalltitle">Developing ICT Skills</h3>
+              <p class="objective-content">
+                Enhance participants' knowledge and application of cutting-edge technologies by 
+                challenging them to integrate practical and theoretical ICT skills in solving real-world problems.
+              </p>
+            </div>
           </div>
+        </div>
 
+        <div class="objective-container">
+          <div class="objective-textbox3">
+            <div class="objective-image">
+              <img src="./assets/images/Teamwork.svg" alt="Teamwork" />
+            </div>
+            <div class="objective-text">
+              <h3 class="objective-smalltitle">Promote Team Spirit</h3>
+              <p class="objective-content">
+                Strengthen partnerships between students and industries by facilitating teamwork to design
+                prototypes or products that address designated industrial challenges.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
-    </section>
+
+      <div class="recap text-center px-xl-5 pt-5">
+        <h2 class="aboutus-title aboutus">RECAP</h2>
+        <div class="small-bulb-icon">
+          <img src="./assets/images/bulb.svg" alt="Bulb Icon" />
+        </div>            
+        <iframe class="text-center px-xl-5" 
+                width="100%" 
+                height="359" 
+                src="https://www.youtube.com/embed/zEsi570tJe0?controls=0&showinfo=0" 
+                title="UMHackathon Recap" 
+                frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                allowfullscreen>
+        </iframe>
+      </div>
+
+      <div class="design-container purple-blur-bottom-right">
+        <img src="./assets/images/bottom-right-doodle.svg" alt="Bottom Right Doodle" />
+      </div>
+    </div>
+  </div>
+</section>
 
     <!-- ===================
         OVERVIEW & MILESTONE Section
