--- a/index.html
+++ b/index.html
@@ -147,23 +147,22 @@
     <!--=================== 
         ABOUT US & OBJECTIVE Section + Recap Video
         =================== -->
-    <section id="about-us" class="aboutus-section">
-      <div class="background-elements">
-        <img src="./assets/images/curve-star.svg" alt="Curve Star" class="curve-star" />
-        <img src="./assets/images/top-left-doodle.svg" alt="Top Left Doodle" class="top-left-doodle" />
-        <img src="./assets/images/bottom-right-doodle.svg" alt="Bottom Right Doodle" class="bottom-right-doodle" />
+    <!-- Purple Blur Top Left (Background Element) -->
+<div class="design-container purple-blur-top-left">
+  <img src="./assets/images/top-left-design.svg" alt="Top Left Doodle" />
+</div>
+<!-- Main About Us Section -->
+<section id="about-us" class="aboutus-section">    
+  <div class="container">
+    <div class="aboutus-container">
+      <h2 class="aboutus-title aboutus">ABOUT US</h2>
+      <div class="aboutus-wrapper">
+        <p class="aboutus-content">
+          UMHackathon 2024 is a national hackathon organized by the Persatuan Komputer Universiti Malaya (PEKOM) and the 
+          Faculty of Computer Science and Information Technology, focusing on Data Science and Machine Learning. 
+          We aim to solve real-world data challenges in various fields through industry experts.
+        </p>
       </div>
-      <div class="container">
-        <div class="aboutus-container">
-          <h2 class="aboutus-title aboutus">ABOUT US</h2>
-
-          <div class="aboutus-wrapper">
-            <p class="aboutus-content">
-              UMHackathon 2025 is a national hackathon organized by the Persatuan Komputer Universiti Malaya(PEKOM) and the 
-              Faculty of Computer Science and Information Technology, focusing on Data Science and Machine Learning. 
-              We aim to solve real-world data challenges in various fields through industry experts.
-            </p>
-          </div>
 
       <h2 class="aboutus-title">OBJECTIVE</h2>
       <div class="objective">
