change button and background

--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
             <div>
               <div class="join-now-button" data-aos-offset="50" data-aos-delay="1500" data-aos="fade-right" data-aos-once="true">
                 <a
-                  class="btn btn-danger btn-lg rounded-2 button_join my-3"
+                  class="btn btn-danger btn-lg rounded-pill button_join my-3"
                   href="https://cutt.ly/umhackathon2023_teamregistration"
                   target="_self"
-                  >Join Now! <i class="uil uil-lightbulb"></i>
+                  >Join Now!  <img src="./assets/images/bulb.svg" alt="Bulb Icon" width="30" height="30" />
                 </a>
               </div>
             </div>
@@ -130,7 +130,7 @@
           </div>
         </div>
       </div>
-      <!-- The animated square block background in homepage -->
+      <!-- The animated square block background in homepage 
       <ul class="circles">
         <li></li>
         <li></li>
@@ -142,7 +142,7 @@
         <li></li>
         <li></li>
         <li></li>
-      </ul>
+      </ul> -->
     </section>
     <!--=================== 
         ABOUT US & OBJECTIVE Section + Recap Video
