--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
       <div class="count_down_timer_container">
         <h2 class="section_title">CountDown to UMHackathon 2025</h2>
         <div class="count_down_timer">
-          <div class="circle" style="--clr: #00ddff">
+          <div class="circle" style="--clr: #90B3E7">
             <div class="dots day_dot"></div>
             <svg>
               <circle cx="70" cy="70" r="70"></circle>
@@ -443,7 +443,7 @@
             <div id="days">00<br /><span>Days</span></div>
           </div>
 
-          <div class="circle" style="--clr: #ff2972">
+          <div class="circle" style="--clr: #749DE8">
             <div class="dots hr_dot"></div>
             <svg>
               <circle cx="70" cy="70" r="70"></circle>
@@ -452,7 +452,7 @@
             <div id="hours">00<br /><span>Mins</span></div>
           </div>
 
-          <div class="circle" style="--clr: #fee800">
+          <div class="circle" style="--clr: #5887E9">
             <div class="dots min_dot"></div>
             <svg>
               <circle cx="70" cy="70" r="70"></circle>
@@ -461,7 +461,7 @@
             <div id="minutes">00</div>
           </div>
 
-          <div class="circle" style="--clr: #04fc43">
+          <div class="circle" style="--clr: #3C71EA">
             <div class="dots sec_dot"></div>
             <svg>
               <circle cx="70" cy="70" r="70"></circle>
@@ -472,7 +472,8 @@
         </div>
       </div>
 
-      <img src="./assets/images/countdown-1.svg" alt="countdown-graphic" />
+      <!-- <img src="./assets/images/countdown-1.svg" alt="countdown-graphic" /> -->
+    
     </section>
 
     <!--===================
