change umh logo

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       >
         <div class="container-fluid">
           <a href="#home" class="navbar-brand">
-            <img id="navigation-logo" src="./assets/images/BLACK FONT.PNG" />
+            <img id="navigation-logo" src="./assets/images/umh-logo2025-white.PNG" />
           </a>
           <!-- toggle button for  small screen size -->
           <button
@@ -127,6 +127,9 @@
               />
               <div class="robot-shadow shadow "></div>
             </div>
+          </div>
+          <div class="design-container purple-blur-top-left">
+            <img src="./assets/images/homepagebottomleft.svg" alt="Top Left Doodle" />
           </div>
         </div>
       </div>
